apps/explorer/src/components/ownedobjects/styles/OwnedObjects.module.css
.layout {
    @apply mt-0 flex flex-wrap;
}

.layout > div {
    @apply w-full sm:w-[600px];
}

.previewimage > div,
.previewimage > div > img {
    @apply mr-[20px] h-[60px] w-[60px];
}

.layout > div:first-child {
    @apply sm:mr-[4vw] sm:border-0 sm:border-r sm:border-solid sm:border-gray-45 sm:pr-[4vw];
}

.ownedobjects {
    @apply w-[100%] lg:flex lg:min-h-[240px] lg:flex-wrap lg:justify-between;
}

.objectbox {
    @apply my-[5vh] flex h-fit min-h-[72px] items-center break-all sm:my-[1vh] lg:w-[50%];
}

.objectbox a {
    @apply font-mono;
}

.textitem {
    @apply sm:pr-[20px];
}

.ownedobjectheader {
    @apply my-4;
}

.ownedobjectheader > h2 {
    @apply text-lg text-gray-100;
}

.typevalue {
    @apply overflow-hidden text-gray-80;

    display: block;
    display: -webkit-box; /* stylelint-disable-line value-no-vendor-prefix */
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
    text-overflow: ellipsis;
}

.gray {
    @apply text-gray-85;
}

.fail {
    @apply mt-2 font-sans font-semibold text-issue-dark;
}

.name {
    @apply text-[13px] font-medium leading-[130%] text-gray-90;
}

